сделал модуль 8 часть 2

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес (координаты)</label>
-          <input id="address" name="address" type="text">
+          <input id="address" name="address" type="text" required>
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
@@ -108,7 +108,7 @@
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="5000" required max="100000"
+          <input id="price" name="price" type="number" placeholder="1000" required max="100000"
             data-pristine-required-message="Обязательное поле"
             data-pristine-max-message="Максимальная цена 100000">
           <div class="ad-form__slider"></div>
